[package]
name = "meta-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for meta - exposes multi-repo operations to AI tools"

[[bin]]
name = "meta-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
